[gd_scene load_steps=54 format=2]

[ext_resource path="res://imported_assets/computer/better-close.png" type="Texture" id=1]
[ext_resource path="res://ActionLevels/Room/BrowserComputerScreen2D.gd" type="Script" id=2]
[ext_resource path="res://imported_assets/computer/Battlenet.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://imported_assets/computer/browser-background-cats.png" type="Texture" id=4]
[ext_resource path="res://imported_assets/fonts/comic_andy.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://imported_assets/fonts/verdana-bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://imported_assets/fonts/verdana.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://ActionLevels/Room/WebpageUnfocusedMenu.tres" type="StyleBox" id=8]
[ext_resource path="res://ActionLevels/Room/MenuBarButton.gd" type="Script" id=9]
[ext_resource path="res://imported_assets/computer/level_select/forest.png" type="Texture" id=10]
[ext_resource path="res://ActionLevels/Room/GoHereButton.gd" type="Script" id=11]
[ext_resource path="res://Components/CanCreateDialogue.tscn" type="PackedScene" id=12]
[ext_resource path="res://DialogBox/dialogue_text/goherebutton.tres" type="Resource" id=13]

[sub_resource type="Shader" id=15]
code = "shader_type canvas_item;

uniform vec4 color : hint_color = vec4(1.0);
uniform float width : hint_range(0, 10) = 1.0;
uniform int pattern : hint_range(0, 2) = 0; // diamond, circle, square
uniform bool inside = false;
uniform bool add_margins = true; // only useful when inside is false

uniform bool outline_left = true;
uniform bool outline_top = true;
uniform bool outline_right = true;
uniform bool outline_bottom = true;

void vertex() {
	if (add_margins) {
		VERTEX += (UV * 2.0 - 1.0) * width;
	}
}

bool hasContraryNeighbour(vec2 uv, vec2 texture_pixel_size, sampler2D texture) {
	for (float i = -ceil(width); i <= ceil(width); i++) {
		float x = abs(i) > width ? width * sign(i) : i;
		float offset;
		
		if (pattern == 0) {
			offset = width - abs(x);
		} else if (pattern == 1) {
			offset = floor(sqrt(pow(width + 0.5, 2) - x * x));
		} else if (pattern == 2) {
			offset = width;
		}
		
		for (float j = -ceil(offset); j <= ceil(offset); j++) {
			float y = abs(j) > offset ? offset * sign(j) : j;
			
			// Skip sides based on uniform settings
			if ((!outline_left && i < 0.0) || (!outline_top && j < 0.0) || (!outline_right && i > 0.0) || (!outline_bottom && j > 0.0)) {
				continue;
			}
			
			vec2 xy = uv + texture_pixel_size * vec2(x, y);
			
			if ((xy != clamp(xy, vec2(0.0), vec2(1.0)) || texture(texture, xy).a == 0.0) == inside) {
				return true;
			}
		}
	}
	
	return false;
}

void fragment() {
	vec2 uv = UV;
	
	if (add_margins) {
		vec2 texture_pixel_size = vec2(1.0) / (vec2(1.0) / TEXTURE_PIXEL_SIZE + vec2(width * 2.0));
		
		uv = (uv - texture_pixel_size * width) * TEXTURE_PIXEL_SIZE / texture_pixel_size;
		
		if (uv != clamp(uv, vec2(0.0), vec2(1.0))) {
			COLOR.a = 0.0;
		} else {
			COLOR = texture(TEXTURE, uv);
		}
	} else {
		COLOR = texture(TEXTURE, uv);
	}
	
	if ((COLOR.a > 0.0) == inside && hasContraryNeighbour(uv, TEXTURE_PIXEL_SIZE, TEXTURE)) {
		COLOR.rgb = inside ? mix(COLOR.rgb, color.rgb, color.a) : color.rgb;
		COLOR.a += (1.0 - COLOR.a) * color.a;
	}
}"

[sub_resource type="ShaderMaterial" id=16]
shader = SubResource( 15 )
shader_param/color = Color( 0.788235, 0.894118, 0.870588, 1 )
shader_param/width = 4.0
shader_param/pattern = 2
shader_param/inside = false
shader_param/add_margins = true
shader_param/outline_left = true
shader_param/outline_top = true
shader_param/outline_right = true
shader_param/outline_bottom = true

[sub_resource type="Gradient" id=17]
offsets = PoolRealArray( 0, 0.92598, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture2D" id=18]
gradient = SubResource( 17 )
width = 1248
height = 702

[sub_resource type="Shader" id=19]
code = "shader_type canvas_item;

uniform vec4 color : hint_color = vec4(1.0);
uniform float width : hint_range(0, 10) = 1.0;
uniform int pattern : hint_range(0, 2) = 0; // diamond, circle, square
uniform bool inside = false;
uniform bool add_margins = true; // only useful when inside is false

uniform bool outline_left = true;
uniform bool outline_top = true;
uniform bool outline_right = true;
uniform bool outline_bottom = true;

void vertex() {
	if (add_margins) {
		VERTEX += (UV * 2.0 - 1.0) * width;
	}
}

bool hasContraryNeighbour(vec2 uv, vec2 texture_pixel_size, sampler2D texture) {
	for (float i = -ceil(width); i <= ceil(width); i++) {
		float x = abs(i) > width ? width * sign(i) : i;
		float offset;
		
		if (pattern == 0) {
			offset = width - abs(x);
		} else if (pattern == 1) {
			offset = floor(sqrt(pow(width + 0.5, 2) - x * x));
		} else if (pattern == 2) {
			offset = width;
		}
		
		for (float j = -ceil(offset); j <= ceil(offset); j++) {
			float y = abs(j) > offset ? offset * sign(j) : j;
			
			// Skip sides based on uniform settings
			if ((!outline_left && i < 0.0) || (!outline_top && j < 0.0) || (!outline_right && i > 0.0) || (!outline_bottom && j > 0.0)) {
				continue;
			}
			
			vec2 xy = uv + texture_pixel_size * vec2(x, y);
			
			if ((xy != clamp(xy, vec2(0.0), vec2(1.0)) || texture(texture, xy).a == 0.0) == inside) {
				return true;
			}
		}
	}
	
	return false;
}

void fragment() {
	vec2 uv = UV;
	
	if (add_margins) {
		vec2 texture_pixel_size = vec2(1.0) / (vec2(1.0) / TEXTURE_PIXEL_SIZE + vec2(width * 2.0));
		
		uv = (uv - texture_pixel_size * width) * TEXTURE_PIXEL_SIZE / texture_pixel_size;
		
		if (uv != clamp(uv, vec2(0.0), vec2(1.0))) {
			COLOR.a = 0.0;
		} else {
			COLOR = texture(TEXTURE, uv);
		}
	} else {
		COLOR = texture(TEXTURE, uv);
	}
	
	if ((COLOR.a > 0.0) == inside && hasContraryNeighbour(uv, TEXTURE_PIXEL_SIZE, TEXTURE)) {
		COLOR.rgb = inside ? mix(COLOR.rgb, color.rgb, color.a) : color.rgb;
		COLOR.a += (1.0 - COLOR.a) * color.a;
	}
}"

[sub_resource type="ShaderMaterial" id=20]
shader = SubResource( 19 )
shader_param/color = Color( 0.788235, 0.894118, 0.870588, 1 )
shader_param/width = 2.0
shader_param/pattern = 0
shader_param/inside = true
shader_param/add_margins = true
shader_param/outline_left = false
shader_param/outline_top = false
shader_param/outline_right = false
shader_param/outline_bottom = true

[sub_resource type="Gradient" id=21]
colors = PoolColorArray( 0.858824, 0.803922, 0.941176, 1, 0.858824, 0.803922, 0.941176, 1 )

[sub_resource type="GradientTexture2D" id=22]
gradient = SubResource( 21 )
width = 1248
height = 25

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 50, 50 )

[sub_resource type="DynamicFont" id=26]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="Shader" id=27]
code = "shader_type canvas_item;

uniform vec2 Direction = vec2(1.0, 0.0);
uniform float Speed = 0.1;

void fragment()
{
	COLOR = texture(TEXTURE, UV + (Direction * TIME * Speed));
}"

[sub_resource type="ShaderMaterial" id=28]
shader = SubResource( 27 )
shader_param/Direction = Vector2( 1, 1 )
shader_param/Speed = 0.04

[sub_resource type="Gradient" id=29]
colors = PoolColorArray( 1, 0.941176, 0.843137, 1, 1, 0.941176, 0.843137, 1 )

[sub_resource type="GradientTexture2D" id=30]
gradient = SubResource( 29 )
width = 866
height = 678

[sub_resource type="Gradient" id=31]
colors = PoolColorArray( 1, 0.933333, 0.843137, 1, 1, 0.815686, 0.811765, 1 )

[sub_resource type="GradientTexture2D" id=32]
gradient = SubResource( 31 )
fill_to = Vector2( 0, 1 )

[sub_resource type="StyleBoxTexture" id=33]
texture = SubResource( 32 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="Gradient" id=35]
offsets = PoolRealArray( 0.177632, 1 )
colors = PoolColorArray( 0.964706, 0.803922, 0.94902, 1, 0.815686, 0.611765, 1, 1 )

[sub_resource type="GradientTexture2D" id=36]
gradient = SubResource( 35 )
fill_to = Vector2( 0, 1 )

[sub_resource type="StyleBoxTexture" id=37]
texture = SubResource( 36 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="DynamicFont" id=38]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="Gradient" id=39]
offsets = PoolRealArray( 0.677632, 1 )
colors = PoolColorArray( 0.815686, 0.611765, 1, 1, 0.717647, 0.411765, 1, 1 )

[sub_resource type="GradientTexture2D" id=40]
gradient = SubResource( 39 )
fill_to = Vector2( 0, 1 )

[sub_resource type="StyleBoxTexture" id=41]
texture = SubResource( 40 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="DynamicFont" id=45]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=46]
font_data = ExtResource( 6 )

[sub_resource type="Gradient" id=42]
offsets = PoolRealArray( 0.707237, 1 )
colors = PoolColorArray( 0.815686, 0.611765, 1, 1, 0.909804, 0.811765, 1, 1 )

[sub_resource type="GradientTexture2D" id=43]
gradient = SubResource( 42 )
fill_to = Vector2( 0, 1 )

[sub_resource type="StyleBoxTexture" id=44]
texture = SubResource( 43 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="Gradient" id=47]
offsets = PoolRealArray( 0, 0.0411184 )
colors = PoolColorArray( 1, 0.815686, 0.811765, 1, 1, 0.815686, 0.811765, 1 )

[sub_resource type="GradientTexture2D" id=48]
gradient = SubResource( 47 )
fill_to = Vector2( 0, 1 )

[sub_resource type="StyleBoxTexture" id=49]
texture = SubResource( 48 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="DynamicFont" id=50]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=51]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=52]
size = 18
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=53]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.905882, 0.886275, 0.886275, 1 )

[sub_resource type="Gradient" id=54]
colors = PoolColorArray( 0.815686, 0.611765, 1, 1, 0.447059, 0, 0.85098, 1 )

[sub_resource type="GradientTexture2D" id=55]
gradient = SubResource( 54 )
fill_from = Vector2( 0.0520833, 1 )
fill_to = Vector2( 0.547917, 0.2375 )

[sub_resource type="StyleBoxTexture" id=56]
texture = SubResource( 55 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="DynamicFont" id=57]
font_data = ExtResource( 6 )

[node name="Browser" type="Sprite"]
material = SubResource( 16 )
texture = SubResource( 18 )
script = ExtResource( 2 )

[node name="WindowBar" type="Sprite" parent="."]
unique_name_in_owner = true
material = SubResource( 20 )
position = Vector2( 0, -337.938 )
texture = SubResource( 22 )

[node name="URLAddress" type="Sprite" parent="WindowBar"]
unique_name_in_owner = true

[node name="CloseIcon" type="Sprite" parent="WindowBar"]
unique_name_in_owner = true
position = Vector2( 614, -1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="CloseIconArea2D" type="Area2D" parent="WindowBar/CloseIcon"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WindowBar/CloseIcon/CloseIconArea2D"]
position = Vector2( 0.00012207, 0 )
shape = SubResource( 25 )

[node name="WindowTitle" type="RichTextLabel" parent="WindowBar"]
margin_left = -624.0
margin_top = -16.0
margin_right = -515.0
margin_bottom = 13.0
custom_fonts/normal_font = SubResource( 26 )
text = "Net Surf"
fit_content_height = true
scroll_active = false

[node name="BrowserPage" type="Sprite" parent="."]
unique_name_in_owner = true
material = SubResource( 28 )
position = Vector2( 1.52588e-05, 12 )
scale = Vector2( 2.10811, 1.92614 )
texture = ExtResource( 4 )

[node name="PageBody" type="Sprite" parent="."]
position = Vector2( 1.52588e-05, 12 )
texture = SubResource( 30 )

[node name="PageContainer" type="VBoxContainer" parent="PageBody"]
margin_left = -433.0
margin_top = -339.0
margin_right = 433.0
margin_bottom = 339.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PageTitle" type="Panel" parent="PageBody/PageContainer"]
margin_right = 866.0
margin_bottom = 678.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 33 )

[node name="VBoxContainer" type="VBoxContainer" parent="PageBody/PageContainer/PageTitle"]
margin_right = 866.0
margin_bottom = 678.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="TopPanel" type="Panel" parent="PageBody/PageContainer/PageTitle/VBoxContainer"]
margin_right = 866.0
margin_bottom = 40.0
rect_min_size = Vector2( 866, 40 )
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/panel = SubResource( 37 )

[node name="HBoxContainer2" type="HBoxContainer" parent="PageBody/PageContainer/PageTitle/VBoxContainer/TopPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
alignment = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PageBody/PageContainer/PageTitle/VBoxContainer/TopPanel/HBoxContainer2"]
margin_left = 666.0
margin_right = 866.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
rect_clip_content = false
custom_colors/default_color = Color( 0.956863, 0.266667, 0.266667, 1 )
custom_fonts/normal_font = SubResource( 38 )
bbcode_enabled = true
bbcode_text = "[right]sacred cat's domain[/right]"
meta_underlined = false
text = "sacred cat's domain"
fit_content_height = true
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="MenuPanel" type="Panel" parent="PageBody/PageContainer/PageTitle/VBoxContainer"]
margin_top = 40.0
margin_right = 866.0
margin_bottom = 80.0
rect_min_size = Vector2( 866, 40 )
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/panel = SubResource( 41 )

[node name="HBoxContainer" type="HBoxContainer" parent="PageBody/PageContainer/PageTitle/VBoxContainer/MenuPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = -1
alignment = 2

[node name="Dummy" type="Panel" parent="PageBody/PageContainer/PageTitle/VBoxContainer/MenuPanel/HBoxContainer"]
margin_right = 499.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PageBody/PageContainer/PageTitle/VBoxContainer/MenuPanel/HBoxContainer/Dummy"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1

[node name="Panel" type="Panel" parent="PageBody/PageContainer/PageTitle/VBoxContainer/MenuPanel/HBoxContainer/Dummy/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 498.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 8 )

[node name="CenterContainer" type="CenterContainer" parent="PageBody/PageContainer/PageTitle/VBoxContainer/MenuPanel/HBoxContainer/Dummy/MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="PageBody/PageContainer/PageTitle/VBoxContainer/MenuPanel/HBoxContainer/Dummy/MarginContainer/Panel/CenterContainer"]
margin_left = 203.0
margin_top = 9.0
margin_right = 293.0
margin_bottom = 29.0
rect_min_size = Vector2( 90, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/bold_font = SubResource( 45 )
custom_fonts/normal_font = SubResource( 46 )
bbcode_enabled = true
meta_underlined = false
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="Locations" type="Panel" parent="PageBody/PageContainer/PageTitle/VBoxContainer/MenuPanel/HBoxContainer"]
margin_left = 498.0
margin_right = 598.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
mouse_filter = 1
size_flags_vertical = 3
script = ExtResource( 9 )
button_label = NodePath("MarginContainer/Panel/CenterContainer/LocationLabel")
button_name = "Locations"

[node name="MarginContainer" type="MarginContainer" parent="PageBody/PageContainer/PageTitle/VBoxContainer/MenuPanel/HBoxContainer/Locations"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1

[node name="Panel" type="Panel" parent="PageBody/PageContainer/PageTitle/VBoxContainer/MenuPanel/HBoxContainer/Locations/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 99.0
margin_bottom = 39.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 44 )

[node name="CenterContainer" type="CenterContainer" parent="PageBody/PageContainer/PageTitle/VBoxContainer/MenuPanel/HBoxContainer/Locations/MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LocationLabel" type="RichTextLabel" parent="PageBody/PageContainer/PageTitle/VBoxContainer/MenuPanel/HBoxContainer/Locations/MarginContainer/Panel/CenterContainer"]
unique_name_in_owner = true
margin_left = 4.0
margin_top = 9.0
margin_right = 94.0
margin_bottom = 29.0
rect_min_size = Vector2( 90, 20 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/bold_font = SubResource( 45 )
custom_fonts/normal_font = SubResource( 46 )
bbcode_enabled = true
bbcode_text = "[b][center]Locations[/center][/b]"
meta_underlined = false
text = "Locations"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="FAQ" type="Panel" parent="PageBody/PageContainer/PageTitle/VBoxContainer/MenuPanel/HBoxContainer"]
margin_left = 597.0
margin_right = 697.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
mouse_filter = 1
size_flags_vertical = 3
script = ExtResource( 9 )
button_label = NodePath("MarginContainer/Panel/CenterContainer/RichTextLabel")
button_name = "FAQ"

[node name="MarginContainer" type="MarginContainer" parent="PageBody/PageContainer/PageTitle/VBoxContainer/MenuPanel/HBoxContainer/FAQ"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1

[node name="Panel" type="Panel" parent="PageBody/PageContainer/PageTitle/VBoxContainer/MenuPanel/HBoxContainer/FAQ/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 99.0
margin_bottom = 39.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 44 )

[node name="CenterContainer" type="CenterContainer" parent="PageBody/PageContainer/PageTitle/VBoxContainer/MenuPanel/HBoxContainer/FAQ/MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="PageBody/PageContainer/PageTitle/VBoxContainer/MenuPanel/HBoxContainer/FAQ/MarginContainer/Panel/CenterContainer"]
margin_left = 4.0
margin_top = 9.0
margin_right = 94.0
margin_bottom = 29.0
rect_min_size = Vector2( 90, 20 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/bold_font = SubResource( 45 )
custom_fonts/normal_font = SubResource( 46 )
bbcode_enabled = true
bbcode_text = "[b][center]FAQ[/center][/b]"
meta_underlined = false
text = "FAQ"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="MessageBoard" type="Panel" parent="PageBody/PageContainer/PageTitle/VBoxContainer/MenuPanel/HBoxContainer"]
margin_left = 696.0
margin_right = 866.0
margin_bottom = 40.0
rect_min_size = Vector2( 170, 0 )
mouse_filter = 1
size_flags_vertical = 3
script = ExtResource( 9 )
button_label = NodePath("MarginContainer/Panel/CenterContainer/RichTextLabel")
button_name = "MessageBoard"

[node name="MarginContainer" type="MarginContainer" parent="PageBody/PageContainer/PageTitle/VBoxContainer/MenuPanel/HBoxContainer/MessageBoard"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1

[node name="Panel" type="Panel" parent="PageBody/PageContainer/PageTitle/VBoxContainer/MenuPanel/HBoxContainer/MessageBoard/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 169.0
margin_bottom = 39.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 44 )

[node name="CenterContainer" type="CenterContainer" parent="PageBody/PageContainer/PageTitle/VBoxContainer/MenuPanel/HBoxContainer/MessageBoard/MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="PageBody/PageContainer/PageTitle/VBoxContainer/MenuPanel/HBoxContainer/MessageBoard/MarginContainer/Panel/CenterContainer"]
margin_left = 9.0
margin_top = 9.0
margin_right = 159.0
margin_bottom = 29.0
rect_min_size = Vector2( 150, 20 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/bold_font = SubResource( 45 )
custom_fonts/normal_font = SubResource( 46 )
bbcode_enabled = true
bbcode_text = "[b][center]Message Board[/center][/b]"
meta_underlined = false
text = "Message Board"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="PageContent" type="ScrollContainer" parent="PageBody/PageContainer/PageTitle/VBoxContainer"]
margin_top = 80.0
margin_right = 866.0
margin_bottom = 678.0
rect_min_size = Vector2( 0, 200 )
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="PageBody/PageContainer/PageTitle/VBoxContainer/PageContent"]
margin_right = 854.0
margin_bottom = 1000.0
rect_min_size = Vector2( 0, 1000 )
size_flags_horizontal = 3

[node name="Locations" type="Panel" parent="PageBody/PageContainer/PageTitle/VBoxContainer/PageContent/VBoxContainer"]
margin_right = 854.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 45 )
rect_clip_content = true
custom_styles/panel = SubResource( 49 )

[node name="VBoxContainer" type="VBoxContainer" parent="PageBody/PageContainer/PageTitle/VBoxContainer/PageContent/VBoxContainer/Locations"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 1200 )

[node name="RichTextLabel" type="RichTextLabel" parent="PageBody/PageContainer/PageTitle/VBoxContainer/PageContent/VBoxContainer/Locations/VBoxContainer"]
margin_right = 854.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/normal_font = SubResource( 50 )
bbcode_enabled = true
bbcode_text = "Choose your own adventure..."
text = "Choose your own adventure..."

[node name="VBoxContainer" type="VBoxContainer" parent="PageBody/PageContainer/PageTitle/VBoxContainer/PageContent/VBoxContainer"]
margin_top = 49.0
margin_right = 854.0
margin_bottom = 1000.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PageBody/PageContainer/PageTitle/VBoxContainer/PageContent/VBoxContainer/VBoxContainer"]
margin_right = 854.0
margin_bottom = 300.0

[node name="LevelDescription" type="Panel" parent="PageBody/PageContainer/PageTitle/VBoxContainer/PageContent/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 425.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 51 )

[node name="RichTextLabel" type="RichTextLabel" parent="PageBody/PageContainer/PageTitle/VBoxContainer/PageContent/VBoxContainer/VBoxContainer/HBoxContainer/LevelDescription"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/bold_font = SubResource( 52 )
bbcode_enabled = true
bbcode_text = "[b]A forest that lies on the outskirts of Towncity. Lately there have been sightings of strange looking animals and cases of people being attacked by bees and snakes.
Occassionally a large flying object over the forest has been spotted. People aren't sure if it's some kind of vehicle or an animal.[/b]"
text = "A forest that lies on the outskirts of Towncity. Lately there have been sightings of strange looking animals and cases of people being attacked by bees and snakes.
Occassionally a large flying object over the forest has been spotted. People aren't sure if it's some kind of vehicle or an animal."

[node name="LevelPic" type="Panel" parent="PageBody/PageContainer/PageTitle/VBoxContainer/PageContent/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 429.0
margin_right = 854.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 51 )

[node name="Sprite" type="Sprite" parent="PageBody/PageContainer/PageTitle/VBoxContainer/PageContent/VBoxContainer/VBoxContainer/HBoxContainer/LevelPic"]
position = Vector2( 203, 98 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 10 )

[node name="GoHereButton" type="Panel" parent="PageBody/PageContainer/PageTitle/VBoxContainer/PageContent/VBoxContainer/VBoxContainer/HBoxContainer/LevelPic"]
anchor_left = 0.459
anchor_top = 0.801
anchor_right = 0.5
anchor_bottom = 0.801
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0
rect_min_size = Vector2( 80, 40 )
custom_styles/panel = SubResource( 53 )
script = ExtResource( 11 )

[node name="Panel" type="Panel" parent="PageBody/PageContainer/PageTitle/VBoxContainer/PageContent/VBoxContainer/VBoxContainer/HBoxContainer/LevelPic/GoHereButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
custom_styles/panel = SubResource( 56 )

[node name="RichTextLabel" type="RichTextLabel" parent="PageBody/PageContainer/PageTitle/VBoxContainer/PageContent/VBoxContainer/VBoxContainer/HBoxContainer/LevelPic/GoHereButton/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
custom_fonts/bold_font = SubResource( 57 )
bbcode_enabled = true
bbcode_text = "[center][b][url]Go[/url] Here[/b][/center]"
text = "Go Here"
scroll_active = false

[node name="CanCreateDialogueGoHere" parent="PageBody/PageContainer/PageTitle/VBoxContainer/PageContent/VBoxContainer/VBoxContainer/HBoxContainer/LevelPic/GoHereButton" instance=ExtResource( 12 )]
unique_name_in_owner = true
title = "go_here_button_forest"
dialogue = ExtResource( 13 )
trigger_from_node = true
initial_character_portrait = 5

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[connection signal="input_event" from="WindowBar/CloseIcon/CloseIconArea2D" to="." method="_on_CloseIconArea2D_input_event"]
[connection signal="mouse_entered" from="WindowBar/CloseIcon/CloseIconArea2D" to="." method="_on_CloseIconArea2D_mouse_entered"]
[connection signal="mouse_exited" from="WindowBar/CloseIcon/CloseIconArea2D" to="." method="_on_CloseIconArea2D_mouse_exited"]
